--- a/package.json
+++ b/package.json
@@ -8,20 +8,33 @@
     "dev": "tsx src/index.ts",
     "build": "tsc -p .",
     "start": "node dist/index.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest",
+    "test:watch": "vitest watch",
+    "test:coverage": "vitest run --coverage",
+    "lint": "tsc --noEmit"
   },
-  "keywords": ["mcp", "image-generation", "openai", "stability", "replicate", "gemini"],
+  "keywords": [
+    "mcp",
+    "image-generation",
+    "openai",
+    "stability",
+    "replicate",
+    "gemini"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
+    "dotenv": "^16.6.1",
     "undici": "^7.2.1",
-    "zod": "^3.24.1",
-    "dotenv": "^16.4.7"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "typescript": "^5.7.2",
+    "@types/node": "^22.10.2",
+    "@vitest/coverage-v8": "^2.1.8",
     "tsx": "^4.19.2",
-    "@types/node": "^22.10.2"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
