--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,56 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+
+# Environment files
 .env
 .env.local
-.mcp.json
-*.log
-.DS_Store
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Test coverage
 coverage/
 .nyc_output/
 
-# Python
-venv/
+# Temporary files
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+# Python (cleanup)
 __pycache__/
+*.py[cod]
+*$py.class
+venv/
+.venv/
+*.egg-info/
 *.pyc
-blank_canvas*.txt
-create_blank_canvas.py
+
+# Claude specific
+.claude/
+
+# MCP config (may contain API keys)
+.mcp.json
+
+# Test artifacts
+*.txt
+!.env.example
+!.env.test
