--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
     "dotenv": "^16.6.1",
+    "sharp": "^0.34.4",
     "undici": "^7.2.1",
     "zod": "^3.24.1"
   },
