feat: Add provider validation script for API key testing
- Create scripts/validate-providers.ts to test all configured providers
- Tests each provider with a simple generation request
- Provides clear success/failure reporting with response times
- Add npm script: npm run validate-providers
- Helps users verify their API keys work before deployment

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
+    "validate-providers": "tsx scripts/validate-providers.ts",
     "lint": "tsc --noEmit"
   },
   "keywords": [
