--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
+    "validate-providers": "tsx scripts/validate-providers.ts",
     "lint": "tsc --noEmit"
   },
   "keywords": [
@@ -27,6 +28,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
     "dotenv": "^16.6.1",
+    "sharp": "^0.34.4",
     "undici": "^7.2.1",
     "zod": "^3.24.1"
   },
