--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "image-gen-mcp",
+  "name": "@merlinrabens/image-gen-mcp",
   "version": "1.1.0",
   "description": "MCP server for image generation with multiple provider support",
   "main": "dist/index.js",
