--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@merlinrabens/image-gen-mcp",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "MCP server for image generation with multiple provider support",
   "main": "dist/index.js",
+  "bin": {
+    "image-gen-mcp": "dist/index.js"
+  },
   "type": "module",
   "scripts": {
     "dev": "tsx src/index.ts",
