feat: Save images to .image-gen-mcp/ in working directory by default
- Add getOutputDirectory() function to manage image storage location
- Default behavior: saves to .image-gen-mcp/ in current working directory
- Configurable via IMAGE_OUTPUT_DIR environment variable:
  - Not set or 'cwd': .image-gen-mcp/ in cwd (default)
  - 'temp': system temp directory (backward compatibility)
  - '/absolute/path': custom directory
- Update cleanup logic to handle both temp and configured directories
- Add documentation in README.md with new Image Storage section
- Add IMAGE_OUTPUT_DIR to .env.example with documentation
- Bump version to 1.1.3

BREAKING CHANGE: Images now save to .image-gen-mcp/ by default instead of temp directory. To keep old behavior, set IMAGE_OUTPUT_DIR=temp

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,12 @@ DEFAULT_PROVIDER=GEMINI
 # Logging level
 # Options: info, debug, error
 LOG_LEVEL=info
+
+# Image output directory
+# Default: .image-gen-mcp in current working directory
+# Options:
+#   - Leave empty/unset for default (.image-gen-mcp in cwd)
+#   - "cwd" for .image-gen-mcp in current directory
+#   - "temp" for system temp directory
+#   - "/absolute/path" for custom directory
+IMAGE_OUTPUT_DIR=
