chore: Remove generated images from git and update .gitignore
- Remove .image-gen-mcp directory from git tracking
- Fix .gitignore to properly exclude .image-gen-mcp/
- Keep generated images locally but exclude from repository

Generated images should not be committed as they are artifacts created during testing and usage.

--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,7 @@ venv/
 # Test artifacts
 *.txt
 !.env.example
-!.env.test.image-gen-mcp/
+!.env.test
+
+# Generated images directory
+.image-gen-mcp/
