--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@merlinrabens/image-gen-mcp",
+  "name": "@merlinrabens/image-gen-mcp-server",
   "version": "1.3.22",
   "description": "MCP server for image generation with multiple provider support",
   "main": "dist/index.js",
   "bin": {
-    "image-gen-mcp": "dist/index.js"
+    "image-gen-mcp-server": "dist/index.js"
   },
   "type": "module",
   "scripts": {
